Update index.html with chadewick img

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <p>Welcome to my website</p>
     <img src="https://cdn.dribbble.com/users/368135/screenshots/3949483/rocket.gif">
       <p>Take a look about my favorite movies:</p>
-      <img src="shorturl.at/szBY6">
+      <img src="https://images.moviesanywhere.com/4c687c78ff419685e15da4e0bab65c89/8706b036-2623-4899-9741-01f1fb669577.jpg">
   </body>
 </html>
