--- a/index.html
+++ b/index.html
@@ -1,13 +1,94 @@
+<!DOCTYPE html>
 <html>
-    <head> 
-      <title>My Page</title>
-  </head>
-  
-  <body>
-    <h1>Arthur Gabriel Silveira Schwengber</h1>
-    <p>Welcome to my website</p>
-    <img src="https://cdn.dribbble.com/users/368135/screenshots/3949483/rocket.gif">
-      <p>Take a look about my favorite movies:</p>
-      <img src="https://images.moviesanywhere.com/4c687c78ff419685e15da4e0bab65c89/8706b036-2623-4899-9741-01f1fb669577.jpg">
-  </body>
-</html>
+<head>
+    <title>Ideias para Website</title>
+    <link rel="stylesheet" href="./styles.css">
+</head>
+<body>
+    <h1>Ideias para Website</h1>
+    <div class="container">
+      <h2>Cores</h2>
+      <div class="color-container">
+        <div class="color-panel azul-clio">
+          <p class="color-label" >Azul Clio</p>
+          <p class="color-hex">#ACC5F9</p>
+          <p class="description">Recomendado usar em header</p>
+        </div>
+        <div class="color-panel branco-gelo">
+          <p class="color-label" >Branco Gelo</p>
+          <p class="color-hex">#F4F5F7</p>
+          <p class="description">Recomendado usar em body</p>
+        </div>
+        <div class="color-panel azul-petroleo">
+          <p class="color-label" >Azul Petróleo</p>
+          <p class="color-hex">#535F78</p>
+          <p class="description">Recomendado usar em footer</p>
+        </div>
+        <div class="color-panel cinza">
+          <p class="color-label" >Cinza</p>
+          <p class="color-hex">#C2C3C4</p>
+          <p class="description">Recomendado usar em header</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h2>Fontes</h2>
+      <div class="font-container">
+        <div class="font-panel">
+          <p class="font-label-dm-mono">DM Mono</p>
+          <p class="regular dm-mono">A raposa pulou sobre o cachorro preguiçoso!</p>
+          <p class="bold dm-mono">A raposa pulou sobre o cachorro preguiçoso!</p>
+          <p class="italic dm-mono">A raposa pulou sobre o cachorro preguiçoso!</p>
+        </div>
+        <div class="font-panel">
+          <p class="font-label-mukta">Mukta</p>
+          <p class="regular mukta">A raposa pulou sobre o cachorro preguiçoso!</p>
+          <p class="bold mukta">A raposa pulou sobre o cachorro preguiçoso!</p>
+          <p class="italic mukta">A raposa pulou sobre o cachorro preguiçoso!</p>
+        </div>
+        <div class="font-panel">
+          <p class="font-label-lora">Lora</p>
+          <p class="regular lora">A raposa pulou sobre o cachorro preguiçoso!</p>
+          <p class="bold lora">A raposa pulou sobre o cachorro preguiçoso!</p>
+          <p class="italic lora">A raposa pulou sobre o cachorro preguiçoso!</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h2>Estilo de Texto</h2>
+      <div class="text-container">
+        <div class="text-panel">
+          <h1>H1: Cabeçalho</h1>
+          <ul>
+            <li>Font-weight: 700 (bold)</li>
+            <li>Font-size: 26px</li>
+            <li>Font-family: Mukta</li>
+          </ul>
+        </div>
+        <div class="text-panel">
+          <h2>H2: Sub-cabeçalho</h2>
+          <ul>
+            <li>Font-weight: 500</li>
+            <li>Font-size: 18px</li>
+            <li>Font-family: Lora</li>
+          </ul>
+        </div>
+        <div class="text-panel">
+          <p>P: Texto de Parágrafo</p>
+          <ul>
+            <li>Font-weight: 400 (regular)</li>
+            <li>Font-size: 14px</li>
+            <li>Font-family: DM Mono</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <h2>Botões</h2>
+      <div class="buttom-panel">
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-link">Link</button>
+        <button type="button" class="btn btn-success">Success</button>
+      </div>
+    </div>
